fix modal z-index

--- a/client/layouts/styles/perspective-shift-layout.less
+++ b/client/layouts/styles/perspective-shift-layout.less
@@ -171,6 +171,7 @@ html, body, .perspective {
                     border-bottom: 1px solid #fff;
                     padding-bottom: 5px;
                     font-size: .8em;
+                    color: #fff;
                 }
             }
 
